<resources>
    <string name="app_name">ChatApp1</string>
    <string name="need_a_new_account">Need a new Account</string>
    <string name="log_out">Log Out</string>
    <string name="display_name">Display Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">CREATE ACCOUNT</string>
    <string name="create_a_new_account">Create a New Account</string>
    <string name="already_have_account">Already have account</string>
    <string name="this_is_the_main_page">This is the Main Page</string>
    <string name="login_to_your_account">Login to your Account</string>
    <string name="your_email">Your Email</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_status">Hi there,I am using ChatApp</string>
    <string name="Cancelfriendreq">Cancel Friend Request</string>
</resources>
